fixed header container alignment

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -12,7 +12,7 @@
 
 .logo {
   display: block;
-  margin-right: 172px;
+  margin-right: 150px;
 }
 
 .burger-btn {
@@ -34,7 +34,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding-left: 0;
+  padding-top: 20px;
 }
 
 /*---------DROPDOWN MENU--------*/
